force-app/main/default/objects/cgcloud__Route_Account__c/cgcloud__Route_Account__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between route and customers.</description>
    <label>Route Customer</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Route Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>