force-app/main/default/objects/cgcloud__Route_Account__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Route_Customers</relationshipLabel>
    <relationshipName>Route_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>