force-app/main/default/objects/cgcloud__Route_Account__c/fields/cgcloud__Record_Link__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Record_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.cgcloud__RECORD_LINK, &quot;_top&quot;)</formula>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>