force-app/main/default/objects/cgcloud__Route_Account__c/fields/cgcloud__Route__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Route__c</fullName>
    <label>Route</label>
    <referenceTo>cgcloud__Route__c</referenceTo>
    <relationshipLabel>Route Customers</relationshipLabel>
    <relationshipName>Route_Customers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>