force-app/main/default/objects/cgcloud__Route_Account__c/fields/cgcloud__Sequence__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>