force-app/main/default/objects/cgcloud__Route_Account__c/fields/cgcloud__Street__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Street__c</fullName>
    <formula>cgcloud__Account__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>