force-app/main/default/objects/cgcloud__Route_Account__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_lookups</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( cgcloud__Route__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(  cgcloud__Visit_Template__r.cgcloud__Sales_Org__c)  || 
TEXT( cgcloud__Route__r.cgcloud__Sales_Org__c ) &lt;&gt; TEXT( cgcloud__Account__r.cgcloud__Account_Template__r.cgcloud__Sales_Org__c )</errorConditionFormula>
    <errorMessage>The Visit Template, the Customer and the Route must have the same Sales Org.</errorMessage>
</ValidationRule>