force-app/main/default/objects/cgcloud__Route_Account__c/validationRules/cgcloud__Sequence_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sequence_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Sequence__c &lt; 0</errorConditionFormula>
    <errorMessage>Sequence must be a positive number.</errorMessage>
</ValidationRule>